Thu Jul  7 13:45:24 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* doc/Makefile.am doc/datacopy.txt editing for style

Thu Jul  7 15:03:45 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS TODO: updates
	* include/tds_sysdep_private.h src/odbc/connectparams.c:
	* src/odbc/convert_sql2string.c src/odbc/convert_tds2sql.c:
	* src/odbc/error.c src/odbc/native.c src/odbc/odbc.c:
	* src/odbc/odbc_checks.c src/odbc/odbc_util.c:
	* src/odbc/prepare_query.c src/odbc/sql2tds.c:
	* src/tds/challenge.c src/tds/config.c src/tds/convert.c:
	* src/tds/data.c src/tds/des.c src/tds/iconv.c:
	* src/tds/locale.c src/tds/login.c src/tds/md4.c:
	* src/tds/md5.c src/tds/mem.c src/tds/net.c src/tds/numeric.c:
	* src/tds/read.c src/tds/tdsstring.c src/tds/threadsafe.c:
	* src/tds/token.c src/tds/util.c src/tds/vstrbuild.c:
	* src/tds/write.c:
	- use TDS_RCSID macro for $Id in sources

Thu Jul  7 13:17:14 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c: compile fix

Wed Jul  6 14:50:00 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* win32/dev-cpp/FreeTDS.dev win32/dev-cpp/Makefile.win:
	- win32 updates

Wed Jul  6 14:32:23 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/tds/net.c src/tds/numeric.c:
	* src/tds/query.c win32/msvc6/libTDS.dsp:
	- win32 updates
	* include/tdsthread.h:
	- cleanup
	- for for recursive mutex
	* src/dblib/dblib.c: do not use recursive mutex
	* src/odbc/unittests/array.c: prevent dangerous use of stack

Wed Jul  6 12:14:54 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/array.c:
	- optimize way paramset result are handled
	- avoid param result overwriting
	- use malloc in array test to detect possible overflows

Tue Jul  5 11:07:07 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/prepare_query.c src/odbc/sql2tds.c src/odbc/sql2tds.h:
	* src/odbc/unittests/array.c: