@@ -1,3 +1,9 @@
+Thu Jul  7 20:33:09 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
+	* include/tdsstring.h src/tds/tdsstring.c:
+	- don't do strange cast
+	- make tds_dstr_empty const
+	* src/tds/util.c: link optimization
+
 Thu Jul  7 13:45:24 EDT 2005	JK Lowden <jklowden@schemamania.org>
 	* doc/Makefile.am doc/datacopy.txt editing for style
 
